--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,3 +8,10 @@
 }
 @import 'blocks/promo';
 @import 'blocks/header.scss';
+@import 'blocks/buttons';
+@import 'blocks/benefits.scss';
+@import 'blocks/media';
+@import 'blocks/concultation';
+@import 'blocks/title';
+@import 'blocks/forms';
+@import 'blocks/carousel'
