--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -15,7 +15,23 @@
         font-weight: 500;
         span {
             display: block;
-            font-size: 19px;
+            font-size: 18px;
         }
     }
+    &__phone {
+        display: block;
+        color: #FFFFFF;
+        font-size: 18px;
+        font-weight: 700;
+        &:hover {
+            color: #fff;
+            text-decoration: none;
+        }
+    }
+    &__contacts {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
 }
+
