--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -8,14 +8,33 @@
     .slick-prev {
         position: absolute;
         top: 50%;
-        transform: translate(-50%);
+        transform: translateY(-50%);
         left: -66px;
         border: none;
         background-color: #fff;
         img {
             width: 31px;
             height: 50px;
-        }
-        
+        }        
     }
+    .slick-next {
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%);
+        right: -66px;
+        left: auto;
+        border: none;
+        background-color: #fff;
+        img {
+            width: 31px;
+            height: 50px;
+        }
+    }
+         
+//   .tns-item {
+//        img {
+//            display: block;
+//            margin: 0 auto;
+//        }
+//    }
 }
