--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,7 @@
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
 .container {
+    position: relative;
     max-width: 950px;
     margin: 0 auto;
 }
@@ -10,8 +11,12 @@
 @import 'blocks/header.scss';
 @import 'blocks/buttons';
 @import 'blocks/benefits.scss';
-@import 'blocks/media';
 @import 'blocks/concultation';
 @import 'blocks/title';
 @import 'blocks/forms';
-@import 'blocks/carousel'
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/review';
+@import 'blocks/footer';
+@import 'blocks/modal';
+@import 'blocks/media';
