--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -121,20 +121,19 @@
                 margin-right: 20px;
             }
         }
-        &__list {
-            position: relative;
+        &__block {
             width: 50%;
-            margin-left: 20px;
-            transform: translateX(0%);
+            transform: translate(0%);
             padding-right: 20px;
             transition: 0.5s all;
-            padding-left: 19px;
             margin-bottom: 0;
-            list-style-type: none;
             &_active {
                 transform: translateX(-100%);
                 margin-left: 0px;
             }
+        &__list {
+            list-style-type: none;
+            padding-inline-start: 30px;
             li {
                 position: relative;
                 font-weight: 300;
@@ -152,7 +151,7 @@
                 }
             }
         }
-        &__back {
+            &__back {
             position: absolute;
             bottom: 0;
             left: 50%;
@@ -167,4 +166,5 @@
             }
         }
     }
+}
 }
