--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -42,4 +42,10 @@
         margin-right: 15px;
         margin-top: 30px;
     }
+    &__iframe {
+        iframe {
+        width: 100%;
+        height: 630px;
+        }
+    }
 }
