--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -97,8 +97,8 @@
     .carousel {
         &__inner {
             img {
-                width: 100%;
-                height: 100%;
+                width: 80%;
+                height: 80%;
                 object-fit: cover;
             }
         }
@@ -181,9 +181,11 @@
     }
     .carousel {
         &__inner {
-            width: 99%;
-            height: 99%;
-            object-fit: cover;
+            img {
+                width: 80%;
+                height: 80%;
+                object-fit: cover;
+            }
         }
     }
     .review {
@@ -210,7 +212,7 @@
     .footer {
         &__info {
             position: absolute;
-            top: 460px;
+            top: 445px;
             left: 50%;
             width: 270px;
             height: 170px;
@@ -225,5 +227,10 @@
         &__phone {
             font-size: 16px;
         }
+    }
+    .feed-form {
+        width: auto;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
